--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@coreui/vue": "^4.10.0",
     "@popperjs/core": "^2.11.6",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
