--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@coreui/vue": "^4.10.0",
+    "@coreui/vue-chartjs": "^2.1.0",
     "@popperjs/core": "^2.11.6",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
