--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,9 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
+    "datatables.net": "^1.13.6",
+    "datatables.net-bs5": "^1.13.6",
+    "jquery": "^3.7.1",
     "js-cookie": "^3.0.5",
     "register-service-worker": "^1.7.2",
     "sweetalert2": "^11.6.13",
